--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@reduxjs/toolkit": "^2.11.2",
     "@vercel/analytics": "1.3.1",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
